--- a/index.htm
+++ b/index.htm
@@ -22,7 +22,8 @@
             <br></br>
 
             <main>
-                <div style="float: left;"><figure><img src="img/selfie.jpg" alt="Me" width="450" height="600" style="text-wrap: wrap;"><figcaption style="text-align: center">On my way to dinner in London</figcaption></figure></div>
+                <div style="float: left;"><figure><img src="img/selfie.jpg" alt="Me" width="450" height="600" style="text-wrap: wrap;">
+                    <figcaption style="text-align: center">On my way to dinner in London</figcaption></figure></div>
                 <br></br>
 
                 <div id="welcome"></div>
@@ -30,15 +31,35 @@
                 <!--begin new section About Me-->
                 <section>
                     <h2>About Me</h2>
-                    <p>My name's Carin Barber and I'm brand new to all of this. The fullest extent of my knowledge is building websites in middle school summer school classes 20 years ago, and then designing my own pages on Myspace. Also twenty years ago. I currently manage a restaurant and have a cat named MJ. She's fantastic. I love traveling and I've been getting my toes wet with trying new things. I have all these hobbies to try and no time to try them. I've been dabbling with German for a few years, I have two guitars and a keyboard I'd like to learn to use, I enjoy baking and being outdoors, learning, reading, knitting, gaming, and Andrew Huberman, Keltie O'Connor, and SYSK podcasts. I would like to move to New England in the next few years and retire at a reasonable age to enjoy all these hobbies I'm trying to learn.</p>
+                    <p>My name's Carin Barber and I'm brand new to all of this. The fullest extent of my knowledge is building websites in 
+                        middle school summer school classes 20 years ago, and then designing my own pages on Myspace. Also twenty years ago. 
+                        I currently manage a restaurant and have a cat named MJ. She's fantastic. I love traveling and I've been getting my 
+                        toes wet with trying new things. I have all these hobbies to try and no time to try them. I've been dabbling with 
+                        German for a few years, I have two guitars and a keyboard I'd like to learn to use, I enjoy baking and being outdoors, 
+                        learning, reading, knitting, gaming, and Andrew Huberman, Keltie O'Connor, and SYSK podcasts. I would like to move to 
+                        New England in the next few years and retire at a reasonable age to enjoy all these hobbies I'm trying to learn.</p>
                 </section>
+
+                <div id="carousel">
+                    <img src="https://images.pexels.com/photos/1454360/pexels-photo-1454360.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Image 1">
+                    <img src="https://images.pexels.com/photos/933964/pexels-photo-933964.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Image 2">
+                    <img src="https://images.pexels.com/photos/267885/pexels-photo-267885.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Image 3">
+                </div>
+                <div id="buttons">
+                    <button id="prev">Previous</button>
+                    <button id="next">Next</button>
+                </div>
 
                 <!--begin new section Favorite Books-->
                 <section>
                     <h2><a href=""></a>Favorite Books</a></h2>
-                    <div style="float: right;"><figure><img src="img/yeonmi.jpg" alt="Yeonmi Park" width="259" height="400" style="text-wrap: wrap;"><figcaption  style="text-align: center;">Yeonmi Park</figcaption></figure></div>
-                    <p>I was always interested in fantasy when I was a kid, but now as I've gotten older, I'm more interested in hearing peoples' stories and enjoy nonfiction, particularly autobiographies of interesting people. The Man Who Broke Into Auschwitz is a brilliant example of this. Some of my favorites, in no particular order, are as follows:
-                        <ul style="border:rgb(255, 255, 255); border-style: solid; border-width: 3px; text-align: center; border-radius: 5px; display: inline-block; padding-top: 15px; padding-left: 15px; padding-right: 15px; padding-bottom: 15px; list-style-type: none;">
+                    <div style="float: right;"><figure><img src="img/yeonmi.jpg" alt="Yeonmi Park" width="259" height="400" style="text-wrap: wrap;">
+                        <figcaption  style="text-align: center;">Yeonmi Park</figcaption></figure></div>
+                    <p>I was always interested in fantasy when I was a kid, but now as I've gotten older, I'm more interested in hearing peoples' stories 
+                        and enjoy nonfiction, particularly autobiographies of interesting people. The Man Who Broke Into Auschwitz is a brilliant example 
+                        of this. Some of my favorites, in no particular order, are as follows:
+                        <ul style="border:rgb(255, 255, 255); border-style: solid; border-width: 3px; text-align: center; border-radius: 5px; 
+                            display: inline-block; padding-top: 15px; padding-left: 15px; padding-right: 15px; padding-bottom: 15px; list-style-type: none;">
                             <li>The Heaven and Earth Grocery Store</li>
                             <li>The Man Who Broke Into Auschwitz</li>
                             <li>LOTR series/The Hobbit</li>
