--- a/index.htm
+++ b/index.htm
@@ -50,6 +50,13 @@
                     <button id="next">Next</button>
                 </div>
 
+                <ul class="todo-list">
+                    <!-- List items will go here -->
+                </ul>
+                
+                <input type="text" id="new-todo" placeholder="Add a new item">
+                <button type="button">Add To Do</button>
+
                 <!--begin new section Favorite Books-->
                 <section>
                     <h2><a href=""></a>Favorite Books</a></h2>
